Update card gallery: remove 3, add 3 new cards

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div id="app" class="p-8">
     
-  <h1 class="text-4xl font-bold mb-6 text-center">{{ showDeck ? "My Deck" : "Card Gallery" }}</h1>
+  <h1 class="text-4xl font-bold mb-6 text-center">{{ showDeck ? "My Deck" : "Card Gallery v11.0" }}</h1>
 
   <div class="text-center mb-4">
     <a href="nommsters.html" class="text-blue-600 hover:underline text-lg">View Nommsters</a>
