--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div id="app" class="p-8">
     
-  <h1 class="text-4xl font-bold mb-6 text-center">{{ showDeck ? "My Deck" : "Card Gallery v11.0" }}</h1>
+  <h1 class="text-4xl font-bold mb-6 text-center">{{ showDeck ? "My Deck" : "Card Gallery v11.1" }}</h1>
 
   <div class="text-center mb-4">
     <a href="nommsters.html" class="text-blue-600 hover:underline text-lg">View Nommsters</a>
@@ -354,7 +354,16 @@ createApp({
     async fetchCards() {
       try {
         const response = await fetch('cards_v11.json');  // Fetch JSON
-        this.cards = await response.json();
+        const data = await response.json();
+
+        // Sort by guild first, then name (both alphabetically)
+        this.cards = data.sort((a, b) => {
+          if (a.guild === b.guild) {
+            return a.name.localeCompare(b.name);
+          }
+          return a.guild.localeCompare(b.guild);
+        });
+        
       } catch (error) {
         console.error("Error loading cards.json:", error);
       } finally {
